--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         },
       }
     </script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -33,6 +34,6 @@
 </head>
   <body class="bg-[#002100]">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
